# Etudes

./: .gitignore  .gitmodules  README.md  index.html  params.json  viette.py
Front/animations/: transition_button.html
Go/arrays-slices-maps/: arrays  arrays.go
Go/hello/: hello
Go/templates/: template.go
JavaScript/: README.md
MEAN/edx/: readme.md
Node/: .gitignore
Node/building-blocks-of-express/: readme.md
Node/cli/: index.js  package.json  readme.md
Node/design_patterns/: readme.md
Node/express/: .gitignore  app.js  index.html  tweet.js
Node/modules/: app.js  custom_goodbye.js  custom_hello.js  http_request.js  make_request.js
Node/persisting/: app.js  index.html  redis.js
Node/socketio/: app.js  index.html
Node/streams/: .gitignore  fileToFile.js  fileUpload.js  pipe.js  streams.js
PHP/chat/: composer.json  readme.md
Python/2023-02-22-read-only/: main.py
Python/Calculo de Pi/: DivInfinita.py  Viette.py  Wallis.py
Python/amazon-s3/: config.example.json  config.json  requirements.txt  simple-upload.py
Python/caching/: Performance de LRU.ipynb
Python/data-structures/: linkednode.py  linkednode_exercises.py
Python/django-cms/: .gitignore  project.db  requirements.txt
Python/eve/demo1/: pyproject.toml  settings.py
Python/eve/demo1/demo1/: __main__.py  run.py  schemata.py
Python/eve/demo1/tests/: test_demo1.py
Python/exceptions/: README.md  chaining.py  masking.py
Python/fastapi/tutorial/: main.py  pyproject.toml
Python/iters/: primality_tests.py  primes.py
Python/logging-exc-info/: test1.py
Python/metaclass/: Metaclass.ipynb
Python/packaging/: README.md
Python/plotly/: Pipfile  Plotly Sample.ipynb
Python/pytest/fixtures/: README.md  pyproject.toml  test_a.py
Python/pytest/fixtures/.pytest_cache/v/cache/: nodeids
Python/sqlalchemy/essential-sqlalchemy/: 02_01_inserts.py  02_02_selects.py  Dockerfile  README.adoc  docker-compose.yml  init_db.py  notes00.adoc  notes01.adoc  notes02.adoc  pyproject.toml
Python/web-frameworks-speed-benchmark/: README.md
algorithms/: simple_binary_search.py
algorithms/2023-03-22-raganwald-regular-languages/: README.md  dfa.py  parenthesis_rec.py
algorithms/dynamic_programming/: benchmark.py  matrix_parenthesizations.py  rod_cutting.py
awk/: caes  cli_examples  fonte  hello.awk  transcripts2gene_counts.awk
c/effective-c/: README.md  hello  hello.c  (+1 more)
challenges/: cod01.py  cod02.py  cod03.py
elixir/: test.ex
nim/: hello_world  hello_world.nim
opencv/: 01 - Basics.ipynb  nn - Hough Transform.ipynb
pl/: README.md
raspberry/: .gitignore
ser-libs/capnproto/demo-01/: addressbook.capnp  demo.py  profiling.cprof  pyproject.toml
(+349 files in other folders)
