[tool.poetry]
name = "tutorial"
version = "0.1.0"
description = ""
authors = ["Felipe Rodrigues <felipe@felipevr.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {version = "^0.42.0", extras = ["all"]}

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
