[tool.poetry]
name = "fixtures"
version = "0.1.0"
description = "Toying with pytest fixtures"
authors = ["Felipe Rodrigues <felipe@felipevr.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
