[tool.poetry]
name = "essential-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Felipe Rodrigues <felipe@felipevr.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^1.4.11"
psycopg2 = "^2.8.6"
ipython = "^7.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
